--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ h1 {
 }
 
 header {
-  /* min-height: 28.4vh; */
   height: 16.9375rem;
   display: flex;
   flex-direction: column;
@@ -66,8 +65,32 @@ svg {
   height: 1.9em;
 }
 
+@media (max-width: 960px) {
+  header {
+    height: 21rem;
+  }
+}
+
 @media (max-width: 640px) {
   :root {
     --background-image: url('./assets//background-sm.jpg');
+  }
+
+  header {
+    height: 17.5rem;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    height: 21rem;
+  }
+
+  h1 {
+    font-size: 1.6em;
   }
 }
