improve accessibility by adding aria-label to search button

--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -29,7 +29,7 @@
     background-color: black;
     color: white;
     fill: white;
-    outline: 1px solid black;
+    outline: 1px solid white;
 }
 
 .input_group input,
