--- a/src/components/BookList.module.css
+++ b/src/components/BookList.module.css
@@ -20,6 +20,19 @@
 
 .load_more_btn {
     margin-bottom: 2em;
+    border: 1px solid black;
+    background-color: white;
+    padding: 0.32em 0.5em;
+    font-size: 1.5em;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin-top: 2.8rem;
+}
+
+.load_more_btn:hover {
+    background-color: black;
+    color: white;
 }
 
 @media (max-width: 640px) {
@@ -30,5 +43,10 @@
     .book_list {
         margin-top: 2rem;
         gap: 2.5rem;
+    }
+
+    .load_more_btn {
+        font-size: 1.3em;
+        margin-top: 2.5rem;
     }
 }
