--- a/src/components/BookCard.module.css
+++ b/src/components/BookCard.module.css
@@ -4,6 +4,13 @@
     flex-direction: column;
     padding: 1.5em;
     background-color: #f3f2f1;
+    transition: all 0.08s ease-in-out;
+}
+
+.card:hover,
+.card:focus-visible {
+    outline: 2px solid black;
+    background-color: white;
 }
 
 .card>img {
