--- a/src/components/BookList.module.css
+++ b/src/components/BookList.module.css
@@ -20,17 +20,18 @@
 
 .load_more_btn {
     margin-bottom: 2em;
-    border: 1px solid black;
+    border: 2px solid black;
     background-color: white;
     padding: 0.32em 0.5em;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     margin-top: 2.8rem;
 }
 
-.load_more_btn:hover {
+.load_more_btn:hover,
+.load_more_btn:focus-visible {
     background-color: black;
     color: white;
 }
@@ -46,7 +47,6 @@
     }
 
     .load_more_btn {
-        font-size: 1.3em;
         margin-top: 2.5rem;
     }
 }
