--- a/src/components/BookList.module.css
+++ b/src/components/BookList.module.css
@@ -20,20 +20,20 @@
 
 .load_more_btn {
     margin-bottom: 2em;
-    border: 2px solid black;
-    background-color: white;
+    margin-top: 2.8rem;
+    border: none;
+    background-color: var(--background-primary);
     padding: 0.32em 0.5em;
     font-size: 1.3em;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    margin-top: 2.8rem;
+    transition: all 0.08s ease-in-out;
 }
 
 .load_more_btn:hover,
 .load_more_btn:focus-visible {
-    background-color: black;
-    color: white;
+    background-color: var(--background-secondary);
+    outline: 2px solid var(--background-tertiary);
 }
 
 @media (max-width: 640px) {
