--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -7,7 +7,7 @@
 }
 
 .input_group {
-    background-color: white;
+    background-color: var(--background-secondary);
     display: flex;
     justify-content: space-between;
 }
@@ -27,10 +27,9 @@
 
 .input_group button:hover,
 .input_group button:focus-visible {
-    background-color: black;
-    color: white;
-    fill: white;
-    outline: 1px solid white;
+    background-color: var(--background-tertiary);
+    fill: var(--color-tertiary);
+    outline: 1px solid var(--background-secondary);
 }
 
 .input_group input,
