--- a/src/components/BookCard.module.css
+++ b/src/components/BookCard.module.css
@@ -24,7 +24,7 @@
     margin-bottom: 1em;
 }
 
-.card>h2 {
+.title {
     color: var(--color-secondary);
 }
 
@@ -32,16 +32,36 @@
     color: var(--color-primary);
 }
 
-.card>.category {
+.category {
     text-decoration: underline;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1200px) {
+    .card {
+        width: 17rem;
+    }
+
+    .title {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 960px)  {
     .card {
         width: 16rem;
     }
+}
 
-    .card>h2 {
-        font-size: 1.2em;
+@media (max-width: 640px) {
+    
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 1.1em;
+    }
+
+    .card>img {
+        margin-bottom: 1.5em;
     }
 }
