--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --background-primary: #f3f2f1;
   --background-secondary: #fff;
   --background-tertiary: #000;
+
+  --header-height: 16.9375rem;
 }
 
 * {
@@ -31,7 +33,7 @@ h1 {
 }
 
 header {
-  height: 16.9375rem;
+  height: var(--header-height);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,9 +47,7 @@ header {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: calc(100vh - var(--header-height));
 }
 
 h1 {
