--- a/src/views/BookList/BookList.module.css
+++ b/src/views/BookList/BookList.module.css
@@ -1,3 +1,9 @@
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .count {
     text-align: center;
     font-weight: bold;
