--- a/src/views/BookDetails/BookDetails.module.css
+++ b/src/views/BookDetails/BookDetails.module.css
@@ -58,6 +58,7 @@
 .buttons {
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
 }
 
 @media (max-width: 1200px) {
