--- a/src/views/MainPage/MainPage.module.css
+++ b/src/views/MainPage/MainPage.module.css
@@ -5,11 +5,11 @@
 }
 
 .load_more_btn {
-    margin-bottom: 2em;
+    margin-bottom: 2.6rem;
     margin-top: 2.8rem;
     border: none;
     background-color: var(--background-primary);
-    padding: 0.32em 0.5em;
+    padding: 0.416rem 0.65rem;
     font-size: 1.3em;
     font-weight: bold;
     cursor: pointer;
