--- a/src/components/buttons/TabButton/TabButton.module.css
+++ b/src/components/buttons/TabButton/TabButton.module.css
@@ -1,6 +1,6 @@
 .tab_button {
     flex: 1;
-    padding: 0.625em;
+    padding: var(--tab-button-padding);
     cursor: pointer;
     background-color: transparent;
     border: none;
