--- a/src/components/SelectInput/SelectInput.module.css
+++ b/src/components/SelectInput/SelectInput.module.css
@@ -11,7 +11,17 @@
     margin-left: 0.35em;
 }
 
+@media (max-width: 960px) {
+    .select {
+        width: 20rem;
+    }
+}
+
 @media (max-width: 640px) {
+    .select {
+        width: 16rem;
+    }
+
     .label {
         font-size: 1em;
     }
