--- a/src/components/book/BookList/BookList.module.css
+++ b/src/components/book/BookList/BookList.module.css
@@ -4,12 +4,17 @@
     gap: 2.8rem;
     justify-content: center;
     margin-top: 2.5rem;
-    padding: 0 1.3rem;
 }
 
 @media (max-width: 640px) {
     .book_list {
         margin-top: 2rem;
         gap: 2.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .book_list {
+        gap: 2em;
     }
 }
