--- a/src/views/MainPage/MainPage.module.css
+++ b/src/views/MainPage/MainPage.module.css
@@ -1,11 +1,4 @@
-.page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .load_more_btn {
-    margin-bottom: 2.6rem;
     margin-top: 2.8rem;
     border: none;
     background-color: var(--background-primary);
@@ -25,5 +18,11 @@
 @media (max-width: 640px) {
     .load_more_btn {
         margin-top: 2.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .load_more_btn {
+        margin-top: 2rem;
     }
 }
